--- a/index.html
+++ b/index.html
@@ -11,26 +11,59 @@
 </head>
 <body>
     <div class="header">
-        <div class="top header">
-            <h1 id="head">bjct_ page</h1>
+        <div class="top">
+            <p><b>bjct_</b></p>
+        </div>
+        <hr>
+        <nav class="menu">
+            <ul>
+                <li><a href="index.html">Главная страница</a></li>
+                <li><a href="">Проекты</a></li>
+                <li><a href="contacts.html">Контакты</a></li>
+            </ul>
+        </nav>
+        <hr>
+        <hr color="black">
+    </div>
+    <div class="main">
+        <div class="left border">
+            <img src="images/background/squares1.png">
+            <img src="images/background/circles1.png">
+        </div>
+        <div class="content">
+            <div class="article">
+                <h3>Чей это за сайт?</h3>
+                <p>Это сайт <a href="https://vk.com/antonyprinzev" title="Страница автора в ВК">Принцевского Антона</a>.
+                    Я изучаю программирование:</p>
+                <ul>
+                    <li>Моим профильным языком является <strong>Python</strong>;</li>
+                    <li>Сейчас я изучаю языки вёрстки: <strong>HTML</strong> и <strong>CSS</strong>;</li>
+                    <li>А также язык программирования <strong>JavaScript</strong>.</li>
+                </ul>
+                <p>Так как мне нужна практика в веб-программировании, то я решил создать свой сайт.</p>
+                <h3>Подробнее об авторе</h3>
+                <p>Мне 14 лет, я перешёл в 8 класс. Провожу много времени за компьютером - занимаюсь чем-то
+                полезным и играю, смотрю видео; продолжите список всеми остальными совершенно бесполезными,
+                    но очень приятными вещами. </p>
+                <p>Делаю telegram-ботов на заказ, ещё много чего делаю - подробнее можно узнать,
+                перейдя по <a href="" title="Чем я занимаюсь">данной ссылке</a>.
+                Там вы можете найти интересующий вас товар или проект.
+                А если вам нужны иные, кроме <a href="" title="ВК страница автора">ВК</a>
+                    контакты, то...</p>
+                <h3>Мои контакты</h3>
+                <ul>
+                    <li><a href="https://github.com/AntChatsky">GitHub</a></li>
+                    <li><a></a></li>
+                    <li>Dicord - "Soundofsilence#3722"</li>
+                </ul>
+            </div>
+            <iframe src="https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=%D0%9F%D0%BE%D0%B4%D0%B4%D0%B5%D1%80%D0%B6%D0%BA%D0%B0%20%D0%B0%D0%B2%D1%82%D0%BE%D1%80%D0%B0&targets-hint=&default-sum=100&button-text=14&payment-type-choice=on&comment=on&hint=&successURL=file%3A%2F%2F%2FE%3A%2Fsite%2Findex.html&quickpay=shop&account=410016122587149" width="423" height="301" frameborder="0" allowtransparency="true" scrolling="no">
+            </iframe>
+        </div>
+        <div class="right border">
+            <img src="images/background/squares2.png">
         </div>
     </div>
-    <nav class="menu">
-        <ul>
-            <li><a href="">Пункт меню</a></li>
-            <li><a href="">Пункт меню</a></li>
-            <li><a href="">Пункт меню</a></li>
-        </ul>
-    </nav>
-    <div class="article">
-        <h3>Немного информации обо мне:</h3>
-        <ul>
-            <li>Я школьник, учусь в 8 классе</li>
-            <li>Работаю с <b>python</b>, учу языкы вёрстки <b>CSS</b> и <b>HTML</b>, <b>JavaScript</b></li>
-            <li><a href="contacts.html" title="Контактные данные автора">
-                Мои контактные данные
-            </a></li>
-        </ul>
-    </div>
 </body>
+<script src="scripts/main.js"></script>
 </html>
