--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <div class="container">
         <div class="text-block">
             <div class="greetings">
-                <p><b>Привет,<br> я Антон, <br> разработчик.</b></p>
+                <h1><b>Привет,<br>я Антон,<br>разработчик.</b></h1>
             </div>
             <div class="skills">
-                <p><b>Python / Web development / Arduino Smart Home</b></p>
+                <h3><b>Python / Web development / Arduino Smart Home</b></h3>
             </div>
-            <button class="contact_button">Связаться со мной</button>
+            <a class="contact_button" href="">Связаться со мной</a>
         </div>
     </div>
     <div class="background">
