--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="author" content="Anton Prinzevski">
     <meta name="description" content="SEO here">
 
-    <title>Homepage</title>
+    <title>Главная страница</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/index.css">
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div class="menu">
             <ul>
                 <li><a id="homepage_link" href="index.html"><img id="homepage_pic" src="images/menu/normal/homepage.png"></a></li>
-                <li><a id="info_link" href="contacts.html"><img id="info_pic" src="images/menu/normal/about_me.png"></a></li>
+                <li><a id="info_link" href="info.html"><img id="info_pic" src="images/menu/normal/about_me.png"></a></li>
                 <li><a id="skills_link" href=""><img id="skills_pic" src="images/menu/normal/skills.png"></a></li>
                 <li><a id="work_link" href=""><img id="work_pic" src="images/menu/normal/work.png"></a></li>
                 <li><a id="contacts_link" href=""><img id="contacts_pic" src="images/menu/normal/contacts.png"></a></li>
