--- a/contacts.html
+++ b/contacts.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="author" content="Anton Prinzevski">
+    <meta name="description" content="SEO here">
+
+    <title>Контакты</title>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="node_modules/jBox-0.4.9/Source/jBox.css">
+    <link rel="stylesheet" href="styles/contacts.css">
 </head>
 <body>
-
+    <div class="nav_bar">
+        <div class="menu">
+            <ul>
+                <li><a id="homepage_link" href="index.html"><img id="homepage_pic" src="images/menu/normal/homepage.png"></a></li>
+                <li><a id="info_link" href="info.html"><img id="info_pic" src="images/menu/normal/about_me.png"></a></li>
+                <li><a id="skills_link" href="skills.html"><img id="skills_pic" src="images/menu/normal/skills.png"></a></li>
+                <li><a id="work_link" href="work.html"><img id="work_pic" src="images/menu/normal/work.png"></a></li>
+                <li><a id="contacts_link" href="contacts.html"><img id="contacts_pic" src="images/menu/normal/contacts.png"></a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="container">
+        <div class="text-block">
+            <div href="" title="I'm tooltip" id="modal">Click me!</div>
+        </div>
+    </div>
 </body>
+<script src="node_modules/jquery/dist/jquery.min.js"></script>
+<script src="node_modules/jBox-0.4.9/Source/jBox.min.js"></script>
+<script src="scripts/contacts.js"></script>
 </html>
