--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <li><a id="homepage_link" href="index.html"><img id="homepage_pic" src="images/menu/normal/homepage.png"></a></li>
                 <li><a id="info_link" href="info.html"><img id="info_pic" src="images/menu/normal/about_me.png"></a></li>
                 <li><a id="skills_link" href="skills.html"><img id="skills_pic" src="images/menu/normal/skills.png"></a></li>
-                <li><a id="work_link" href=""><img id="work_pic" src="images/menu/normal/work.png"></a></li>
-                <li><a id="contacts_link" href=""><img id="contacts_pic" src="images/menu/normal/contacts.png"></a></li>
+                <li><a id="work_link" href="work.html"><img id="work_pic" src="images/menu/normal/work.png"></a></li>
+                <li><a id="contacts_link" href="contacts.html"><img id="contacts_pic" src="images/menu/normal/contacts.png"></a></li>
             </ul>
         </div>
     </div>
