--- a/skills.html
+++ b/skills.html
@@ -17,8 +17,8 @@
                 <li><a id="homepage_link" href="index.html"><img id="homepage_pic" src="images/menu/normal/homepage.png"></a></li>
                 <li><a id="info_link" href="info.html"><img id="info_pic" src="images/menu/normal/about_me.png"></a></li>
                 <li><a id="skills_link" href="skills.html"><img id="skills_pic" src="images/menu/normal/skills.png"></a></li>
-                <li><a id="work_link" href=""><img id="work_pic" src="images/menu/normal/work.png"></a></li>
-                <li><a id="contacts_link" href=""><img id="contacts_pic" src="images/menu/normal/contacts.png"></a></li>
+                <li><a id="work_link" href="work.html"><img id="work_pic" src="images/menu/normal/work.png"></a></li>
+                <li><a id="contacts_link" href="contacts.html"><img id="contacts_pic" src="images/menu/normal/contacts.png"></a></li>
             </ul>
         </div>
     </div>
@@ -32,7 +32,7 @@
                     и модернизации.</span>
                 <div class="button_container">
                     <a class="button" href="">Заказать</a>
-                    <span class="info price">1000</span>
+                    <span class="info price">2500</span>
                     <span class="info">1-3 недели</span>
                 </div>
             </div>
@@ -50,12 +50,12 @@
                     <li>Контроль освещения с помощью звуков или движения;</li>
                     <li>Автоматическое выращивание растений.</li>
                 </ul>
-                <span class="about">Стоит заметить, что в отличие от однодетальных
+                <span class="about">Стоит заметить, что в отличие от безпроцессорных
                 модулей, данные имеют достаточную вычислительную мощность, для
                 выполнения нескольких задач вместо одной.</span>
                 <div class="button_container">
                     <a class="button">Заказать</a>
-                    <span class="info price">600-... </span>
+                    <span class="info price">800-... </span>
                     <span class="info">3-... дней</span>
                 </div>
             </div>
