--- a/contacts.html
+++ b/contacts.html
@@ -7,7 +7,7 @@
 
     <title>Контакты</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="node_modules/jBox-0.4.9/Source/jBox.css">
+    <link rel="stylesheet" href="node_modules/jbox/Source/jBox.css">
     <link rel="stylesheet" href="styles/contacts.css">
 </head>
 <body>
@@ -24,11 +24,10 @@
     </div>
     <div class="container">
         <div class="text-block">
-            <div href="" title="I'm tooltip" id="modal">Click me!</div>
         </div>
     </div>
 </body>
 <script src="node_modules/jquery/dist/jquery.min.js"></script>
-<script src="node_modules/jBox-0.4.9/Source/jBox.min.js"></script>
+<script src="node_modules/jbox/Source/jBox.min.js"></script>
 <script src="scripts/contacts.js"></script>
 </html>
