--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="skills">
                 <h3><b>Python / Web development / Arduino Smart Home</b></h3>
             </div>
-            <a class="button" href="">Связаться со мной</a>
+            <a class="button" href="contacts.html">Связаться со мной</a>
         </div>
     </div>
     <div class="background">
