--- a/work.html
+++ b/work.html
@@ -30,6 +30,14 @@
                     <span class="content0">Тут должен быть текст</span>
                 </div>
             </li>
+            <li class="hover_element">
+                <div class="window_elem1">
+                    <img class="pic" src="images/gallery/medicine_bot.jpg">
+                    <span class="title1">Медицинский telegram бот</span>
+                    <span class="content1"><img src="images/gallery/modal_windows/medicine_bot.png">
+                    </span>
+                </div>
+            </li>
         </ul>
     </div>
 </body>
